--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,17 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- Expose repository sebagai REST HAL (kalau nanti dipakai) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -109,6 +120,7 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- springdoc openapi ui -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
